# llm_wiki

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
config/: llm_wiki.template.toml
docs/: mcp_interface.md
rule/: llm-wiki-knowledge-curator.md
scripts/: package_release.py
skill/llm-wiki-knowledge-curator/: SKILL.md
src/: config.rs  db.rs  embed.rs  indexer.rs  main.rs  markdown.rs  mcp.rs  model.rs  service.rs
systemd/: llm-wiki-watch.service
