[package]
name = "llm-wiki"
version = "0.1.0"
edition = "2024"

[features]
default = ["fastembed-backend"]
fastembed-backend = ["dep:fastembed"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fastembed = { version = "=4.0.0", optional = true, default-features = false, features = ["ort-load-dynamic", "online"] }
hex = "0.4"
rmcp = { version = "2.1.0", features = ["server", "macros", "transport-io", "schemars"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.9"
walkdir = "2.5"

[dev-dependencies]
axum = "0.8"
tempfile = "3.23"
